
@SuppressWarnings("serial")
public class RequestCreateCustomer extends Request {

	RequestCreateCustomer() {
		type = RequestType.CREATECUSTOMER;
	}
	
}
